# bonsai-template

./: .gitignore  .ocamlformat  INSTALL.md  LICENSE  Makefile  README.md  bonsai_template.opam  dune-project  dune-workspace
.github/workflows/: ci.yml
client/: app.ml  dune
patches/: ocamlformat-0.28.1-base_018.patch
scripts/: setup.sh
server/: dune  server.ml
shared/: dune  message.ml
static/: index.html
test/: dune  template_test.ml
